# opendem

./: .gitignore  README.md  pyproject.toml  requirements.txt
opendem/: core.py
